fix: background color

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: #222;
+    background-color: rgb(174, 231, 245);
     color: white;
 }
 
